handle long path names in tarballs from git branches
When generating a tarball from a non-master branch it is better to take the
liberty of relying on a tar program without pathname length limitation -- which
is checked for at configuration time.  This is a good idea now that the branch
name is part of the version identifier.

* bootstrap.conf: Copy machine/dummy--minimal-threading to machine/dummy.  Add
comment.

* configure.ac: Change comment.
(jitter_filename_length_limit_options): New M4 macro.
(AM_INIT_AUTOMAKE): Call with new macro.
(JITTER_ASSEMBLY_SUBDIRECTORY): Add comment about copied "dummy" directory.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -2,6 +2,7 @@
 
 # Copyright (C) 2006-2017 Free Software Foundation, Inc.
 # Copyright (C) 2017, 2020 Luca Saiu
+# Updated in 2021 by Luca Saiu
 # Updated by Luca Saiu for use in Jitter.
 
 # This program is free software: you can redistribute it and/or modify
@@ -87,6 +88,12 @@ unm4sh ()
 # I prefer copies to symlinks, as I may want to move copies of the working
 # directory across machines.
 copy="true"
+
+# Copy one of the dummy machine-specific directories into a subdirectory
+# just named "dummy".  This makes path names shorter, which helps the dist
+# target.
+rm -rf machine/dummy 2> /dev/null || true
+cp -af machine/dummy--minimal-threading machine/dummy
 
 # Delete .version , used for git-version-gen , from the source directory.
 # Doing it here ensures that I don't forget it; I'm used to calling
