--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -1,8 +1,7 @@
 # Bootstrap configuration.
 
 # Copyright (C) 2006-2017 Free Software Foundation, Inc.
-# Copyright (C) 2017, 2020 Luca Saiu
-# Updated in 2021 by Luca Saiu
+# Copyright (C) 2017, 2020, 2021 Luca Saiu
 # Updated by Luca Saiu for use in Jitter.
 
 # This program is free software: you can redistribute it and/or modify
