improve test suite machinery for Structured, add new test case
When testing Structured programs in the test suite print what kind of code
generator is being used: stack or register.

Add a new test case for tail calls -- currently known to fail in the stack case,
where tail calls are not yet implemented.

* tests/utility.in (jitter_run_program_case): Add parameter, change comment.
Change implementation.
(jitter_run_program_case_all_dispatches): Likewise.
(jitter_run_program_case_all_dispatches): Change implementation following the
changes above.
(jitter_run_structured_case_all_dispatches): Likewise.

* tests/structured/programs.test.in: Change test case number.
Add new even-odd test cases.

* tests/structured/even-odd.structured: New file: Structured program to test.

* Makefile.am (EXTRA_DIST): Distribute new file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2235,6 +2235,7 @@ EXTRA_DIST += \
   tests/structured/conditional.structured \
   tests/structured/euclid.structured \
   tests/structured/primes.structured \
+  tests/structured/even-odd.structured \
   tests/uninspired/load-3-bit.vm \
   tests/uninspired/load-4-bit.vm \
   tests/uninspired/load-5-bit.vm \
