structured example build systems: support long pathnames in dist
* example-build-systems/structured-simple/configure.ac: Add parameters to
AM_INIT_AUTOMAKE, and comment.
* example-build-systems/structured-with-library/configure.ac: Likewise.

--- a/example-build-systems/structured-simple/configure.ac
+++ b/example-build-systems/structured-simple/configure.ac
@@ -1,8 +1,8 @@
 ## This is an -*- Autoconf -*- file to be processed with autoconf
 ## to obtain a configure script.
 
-## Copyright (C) 2016, 2017 Luca Saiu
-## Updated in 2019, 2020 and 2021 by Luca Saiu
+## Copyright (C) 2016, 2017, 2021 Luca Saiu
+## Updated in 2019, 2020 by Luca Saiu
 ## Written by Luca Saiu
 
 ## This file is part of the Jitter structured-language example,
@@ -47,7 +47,9 @@ AC_CONFIG_MACRO_DIR([build-aux])
 # Automake initialization.
 ################################################################
 
-AM_INIT_AUTOMAKE
+# The tar-pax option lets make dist work with GNU tar, even if path names are
+# very long.
+AM_INIT_AUTOMAKE([tar-pax])
 
 
 # Check for the C compiler and its features.
